# Video2ASCII

./: CMakeLists.txt  README.md
include/: asciiconverter.hpp  asciiplayer.hpp  utils.hpp
src/: asciiconverter.cpp  asciiplayer.cpp  main.cpp  utils.cpp
